# local_overlay

app-arch/p7zip/: Manifest  p7zip-16.02-r8.ebuild
app-emulation/dxvk/: Manifest  dxvk-1.9.1.ebuild  dxvk-9999.ebuild
app-emulation/looking-glass/: Manifest  looking-glass-1_beta4.ebuild  metadata.xml
app-emulation/vkd3d-proton/: Manifest  metadata.xml  vkd3d-proton-9999.ebuild
app-emulation/wine-proton/: Manifest  metadata.xml  wine-proton-6.3-r6.ebuild  wine-proton-6.3_p20211101.ebuild  wine-proton-6.3_p20211126.ebuild  wine-proton-6.3_p20211203.ebuild  wine-proton-6.3_p20220212.ebuild  wine-proton-9999.ebuild
bluetooth-drivers/rtbth/: rtbth-3.9.6.ebuild
dev-java/openjdk/: Manifest  openjdk-11.0.15_p10-r1.ebuild  openjdk-17.0.3_p7-r1.ebuild  openjdk-8.332_p09.ebuild
dev-lang/crystal/: Manifest  crystal-1.18.2.ebuild
dev-libs/libbacktrace/: Manifest  libbacktrace-9999.ebuild
dev-libs/spirv-cross/: Manifest  metadata.xml  spirv-cross-9999.ebuild
dev-perl/File-Rename/: File-Rename-1.20.ebuild  Manifest
dev-python/marionette/: Manifest  marionette-115.11.0-r1.ebuild  marionette-128.9.0.ebuild
dev-python/mozbase/: Manifest  mozbase-115.12.0-r1.ebuild  mozbase-140.8.0.ebuild
dev-util/ios-webkit-debug-proxy/: Manifest  ios-webkit-debug-proxy-9999.ebuild
dev-util/mesa_clc/: Manifest  mesa_clc-25.2.7.ebuild
games-emulation/citra/: Manifest  citra-9999.ebuild
games-emulation/duckstation/: Manifest  duckstation-0.1.9114.ebuild
games-fps/gzdoom/: Manifest  (+2 more)
kde-misc/plasma-applet-window-title/files/: CMakeLists.txt
profiles/: package.mask
(+328 files in other folders)
